--- a/Silden/Silden/Classes/View Controllers/Login/NAPRegistrationVc.xib
+++ b/Silden/Silden/Classes/View Controllers/Login/NAPRegistrationVc.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1552</int>
-		<string key="IBDocument.SystemVersion">12D78</string>
+		<string key="IBDocument.SystemVersion">12E55</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
-		<string key="IBDocument.AppKitVersion">1187.37</string>
+		<string key="IBDocument.AppKitVersion">1187.39</string>
 		<string key="IBDocument.HIToolboxVersion">626.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -45,6 +45,7 @@
 						<string key="NSFrame">{{25, 492}, {271, 36}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">10</int>
@@ -247,7 +248,7 @@
 					<object class="IBUITextField" id="16970334">
 						<reference key="NSNextResponder" ref="531691974"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{26, 29}, {272, 29}}</string>
+						<string key="NSFrame">{{24, 28}, {270, 30}}</string>
 						<reference key="NSSuperview" ref="531691974"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1037334151"/>
@@ -320,9 +321,10 @@
 					<object class="IBUITextField" id="944293194">
 						<reference key="NSNextResponder" ref="531691974"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{27, 110}, {272, 30}}</string>
+						<string key="NSFrame">{{25, 110}, {270, 30}}</string>
 						<reference key="NSSuperview" ref="531691974"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -402,7 +404,7 @@
 					<object class="IBUITextField" id="154566533">
 						<reference key="NSNextResponder" ref="127782181"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{28, 29}, {272, 29}}</string>
+						<string key="NSFrame">{{26, 28}, {270, 30}}</string>
 						<reference key="NSSuperview" ref="127782181"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="217476952"/>
@@ -467,7 +469,7 @@
 					<object class="IBUITextField" id="772766954">
 						<reference key="NSNextResponder" ref="127782181"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{29, 99}, {272, 30}}</string>
+						<string key="NSFrame">{{26, 99}, {270, 30}}</string>
 						<reference key="NSSuperview" ref="127782181"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="650132217"/>
@@ -535,9 +537,10 @@
 					<object class="IBUITextField" id="886357995">
 						<reference key="NSNextResponder" ref="127782181"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{27, 172}, {272, 30}}</string>
+						<string key="NSFrame">{{27, 173}, {270, 30}}</string>
 						<reference key="NSSuperview" ref="127782181"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
